--- a/epanel/css/login.css
+++ b/epanel/css/login.css
@@ -8,6 +8,8 @@ body {margin:0px; padding:0px; text-align:left; font:normal 12px arial; color:#6
 
 p, h1, h2,h3, h4, h5, h6 { margin:0; padding:0;}
 
+img {border:0;}
+
 .wrapper {}
 
 .header { width:1000px; margin:0 auto;}
